# LensQL

./: Cargo.toml  README.md  dev.sh
src/: errors.rs  lib.rs  main.rs
src/app/: action.rs  command.rs  event.rs  keymap.rs  mod.rs  reducer.rs  reducer_tests.rs  screen.rs  state.rs
src/db/: worker.rs
src/storage/: file_repo.rs  mod.rs  model.rs  repo.rs  secrets.rs  worker.rs
src/ui/: mod.rs  terminal.rs
src/ui/screens/: connections.rs  data.rs  mod.rs  queries.rs  runner.rs  schema.rs
